--- a/CryptoView/cryptoview.ui
+++ b/CryptoView/cryptoview.ui
@@ -338,7 +338,7 @@ border-radius: 5px
 }</string>
       </property>
       <property name="text">
-       <string>ADD PURCHASE</string>
+       <string>SETTINGS</string>
       </property>
      </widget>
      <widget class="QGroupBox" name="crytoBox_1">
@@ -388,11 +388,7 @@ border-radius: 5px
         <string notr="true">background-color:rgba(0, 0, 0, 0);</string>
        </property>
        <property name="text">
-        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Helvetica Neue'; font-size:14pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Helvetica Neue,Helvetica,Arial,sans-serif'; font-size:24px; font-weight:496; color:#ffffff;&quot;&gt;LOADING&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-family:'Helvetica Neue,Helvetica,Arial,sans-serif'; font-size:24px; font-weight:496; color:#ffffff;&quot;&gt;LOADING&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
       <widget class="QLabel" name="coin1_img">
@@ -449,17 +445,81 @@ p, li { white-space: pre-wrap; }
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">.QGroupBox {
-	background:rgba(0,0,0,0.1);
-    border-width: 1px;
-    border-style: solid;
-	border-color: rgba(255,255,255,0.5);
-	border-radius: 5px
- }</string>
+       <string notr="true"/>
       </property>
       <property name="title">
        <string/>
       </property>
+      <widget class="QWidget" name="formLayoutWidget">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>20</y>
+         <width>411</width>
+         <height>141</height>
+        </rect>
+       </property>
+       <layout class="QFormLayout" name="formLayout">
+        <property name="fieldGrowthPolicy">
+         <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+        </property>
+        <property name="labelAlignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+        </property>
+        <property name="formAlignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+        </property>
+        <item row="1" column="1">
+         <widget class="QLabel" name="label">
+          <property name="font">
+           <font>
+            <family>Helvetica Neue</family>
+           </font>
+          </property>
+          <property name="text">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;left&quot;&gt;&lt;span style=&quot; font-family:'Helvetica Neue,Helvetica,Arial,sans-serif'; font-size:14px; font-weight:100; color:#ffffff;&quot;&gt;CHECK INTERVAL&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QComboBox" name="comboBox">
+          <property name="styleSheet">
+           <string notr="true">QComboBox {
+    border-width: 1px;
+    border-style: solid;
+	border-color: rgba(255,255,255,0.5);
+	border-radius: 2px
+
+
+}
+QComboBox::drop-down {
+		border-radius: 0px;
+}</string>
+          </property>
+          <item>
+           <property name="text">
+            <string>30 Seconds</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>1 Minute</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>5 Minutes</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>15 Minutes</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+       </layout>
+      </widget>
      </widget>
      <widget class="QPushButton" name="goBackBtn">
       <property name="geometry">
